0.4.4
	* Enable disabling of chainloading

0.4.3
	* Removed outdated examples
	* app_uri and loader_uri are now treated as any other options.

0.4.2
	* Changed how flashVars are treated.
0.4.1
	* JC.init now takes a configuration hash that enables tweaking of options for embedding

0.3.1
	* Fixed loginUri bug
	* introduced uri_authority that replaces sitename concept

0.2
	* event support
	* documentation updates

0.1
	* initial version